slideshow test, cant get it to wrap correctly, at all

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -161,3 +161,24 @@ a:hover
   color: $primary
 .newsletter .label 
     display: inline
+
+.slide-container 
+  width: 70%
+  margin: auto 
+
+h3 
+  text-align: center 
+
+.each-slide > div 
+  display: flex
+  align-items: center
+  justify-content: center
+  background-size: cover
+  height: 300px
+
+
+.each-slide span 
+  padding: 40px
+  font-size: 20px
+  background: #efefef
+
